--- a/app/src/main/res/values/steps.xml
+++ b/app/src/main/res/values/steps.xml
@@ -1508,4 +1508,169 @@
 	<item>Намажьте тонким слоем этой смесью ломтики хлеба или батона, обжарьте с обеих сторон, выкладывая начинкой вниз.</item>
 </string-array>
 
+<string-array name="sosiski_na_paru">
+	<item>Налейте на дно пароварки немного воды и вскипятите ее. На решетку положите тщательно вымытые сосиски  и варите их 5 минут на слабом огне.</item>
+</string-array>
+
+<string-array name="sosiski_s_pomidorami">
+	<item>Поджарьте на сковороде ломтики помидоров, а потом положите к ним вареные сосиски. Поджарьте их вместе.</item>
+</string-array>
+
+<string-array name="sosiski_jarenie">
+	<item>Отварите сосиски и положите их на горячую сковороду с горячим маслом. </item>
+	<item>Обжарьте их с обеих сторон, чтобы кожица подрумянилась а может и даже лопнула.</item>
+	<item>Такие хорошо подавать с кетчупом или с другим томатным соусом.</item>
+</string-array>
+
+<string-array name="sirniki">
+	<item>Смешайте творог с сырым яйцом, сахаром, 3 ст. ложками муки, солью и ванилином. </item>
+	<item>Слепите из массы сырники, обваляйте их в муке и выложите на разогретую сковороду. Жарьте на сливочном масле по 7 минут с каждой стороны.</item>
+</string-array>
+
+<string-array name="kortofelnoe_pure">
+	<item>Очистите картофель, помойте, нарежьте и положите в подсоленную кипящую воду. </item>
+	<item> Когда картофель проварится (можно даже чтобы он начинал развариваться), слейте с него воду и разомните деревянной колотушкой или картофелемялкой. </item>
+	<item>Добавьте горячее молоко и сливочное масло и взбивайте деревянной ложкой, пока масса не станет пышной. Положите в посуду и посыпьте зеленью. (Если нет молока – просто не сливайте всю воду из кастрюли). Еще можно обжарить лук и перемешать с пюре</item>
+</string-array>
+
+<string-array name="kartofel_s_salom_micro">
+	<item>Картофель очистите и нарежьте тонкими 2 мм кружочками (чем тоньше кружочки – тем быстрее приготовится блюдо). Нарежьте сало ломтиками такой же величины, что и картошка.</item>
+	<item>На блюдо (для микроволновки) положите слой картофеля, подсолите и положите слой сала. И так пока не закончится картофель. Закройте колпаком и поставьте в микроволновку.</item>
+	<item>Готовить при мощности более 450 Вт примерно через каждые 5 минут проверяйте готова картошка или нет. (10-15 минут бывает достаточно).</item>
+</string-array>
+
+<string-array name="grechka_po_mexican">
+	<item>На глубокой сковороде разогрейте растительное масло и засыпьте промытую гречку. Хорошо прожарьте, но следите, чтобы не сгорели зерна.</item>
+	<item>Залейте горячей кипяченной водой примерно на 2 см выше уровня гречки и полейте соевым соусом (он полезней обычной соли). Потушите с открытой крышкой минут 15 (часть воды уже испарится а гречка набухнет).</item>
+	<item>Очистите чеснок и засуньте при помощи лопатки в гречку. через 5 минут посыпьте мексиканскими приправами (это может быть и приправа “тако”, основная черта таких приправ: красный перец, аджика и паприка). Перемешайте и доведите до готовности.</item>
+</string-array>
+
+<string-array name="gogol_mogol">
+	<item>Яйцо вылейте в стакан, посолите, поперчите, добавьте маленькие кусочки черного хлеба и все хорошенько перемешайте.</item>
+</string-array>
+
+<string-array name="risovie_kotleti">
+	<item>Сварите из риса клейкую кашу, посолите и дайте остыть. Добавьте муки, перемешайте и сформируйте котлеты.</item>
+	<item>Обваляйте их в сухарях и обжарьте в растительном масле до румяной корочки. Подавайте с зеленым горошком, грибным или томатным соусом.</item>
+</string-array>
+
+<string-array name="otbivni">
+	<item>Мясо отбейте, посолите и припраьте с обеих сторон. Положите в бутербродницу. Смажьте мясо аджикой, положите порезанный чеснок и посыпьте тертым сыром.</item>
+	<item>Закройте прибор и включите в сеть. Как нагреется, готовьте 5 минут. Выключите прибор.</item>
+</string-array>
+
+<string-array name="kartofeline_kotleti">
+	<item>Очистите и протрите на терке картофель. Добавьте муку, масло и яйца и все хорошо размешайте. Насыпьте на доску муку и выложите часть картофельного теста.</item>
+	<item>Cкатайте из теста толстую колбаску и разрежьте ее ножом на куски. Каждый кусок обваляйте в муке и пошлепайте ножом. Положите котлеты на разогретую сковороду с горячим маслом и жарьте с обеих сторон.</item>
+</string-array>
+
+<string-array name="kartofel_jareni">
+	<item>Почистите сырой картофель и нарежьте его соломкой. Вымойте и просушите на салфетке. Положите его на горячуб сковороду с большим количеством масла и прикройте крышкой.</item>
+	<item>Жарьте его на среднем огне, перемешивая ножом. Когда картофель будет готов, посолите его.</item>
+</string-array>
+
+<string-array name="podjareni_vareni_kartofel">
+	<item>Варенный картофель нарежьте круглыми ломтиками и положите на разогретую с маслом сковороду. </item>
+	<item>Когда немного подрумянится, посолите. Жарьте его 10 минут, переворачивая. Перед подачей посыпьте зеленью.</item>
+</string-array>
+
+<string-array name="kartofel_molodoy_v_smetane">
+	<item>Очищенный молодой картофель сварите в подсоленной воде. Слейте воду, положите туда масло, сметану и зелень и хорошо встряхните, чтобы все перемешалось.</item>
+</string-array>
+
+<string-array name="razvarnoy_kartofel">
+	<item>Картофель очистите, вымойте холодной водой и положите в кастрюлю. Налейте воды, чтобы она закрывала весь картофель. Посолите и поставьте кастрюлю на огонь. </item>
+	<item>Когда картофель станет мягким, слейте воду и снова поставьте кастрюлю на слабый огонь, чтобы картофель немного обсушился. Подавайте со сливочным маслом и зеленью.</item>
+</string-array>
+
+<string-array name="varenoe_yaytso">
+	<item>2 минуты в кипящей воде – яйцо всмятку</item>
+	<item>4 минуты – яйцо в мешочке</item>
+	<item>10 минут – яйцо крутое</item>
+</string-array>
+
+<string-array name="mannaya_kasha">
+	<item>Налейте в кастрюлю воды, молока, положите туда соль, сахар и манку. Варите, помешивая,  на небольшом огне, пока каша не загустеет. Положите сливочное масло.</item>
+</string-array>
+
+<string-array name="grechnevaya_kasha">
+	<item>Переберите и вымойте крупу. Высыпьте ее на разогретую сковороду и обжаривайте пока не станет золотистой и не начнет потрескивать. Добавьте масла и немного подрумяньте ее. </item>
+	<item> Пересыпьте крупу в кипящую воду и поставьте на слабый огонь. Посолите и пусть варится под крышкой 15-20 минут. Снимите кастрюлю с огня, заверните в газету, затем в полотенце и пусть каша доходит сама.</item>
+</string-array>
+
+<string-array name="sosiski_varenie">
+	<item>В кипящую воду опустите очищенные от целофана сосиски (если они в натуральной оболочке – не чистите их) и варите 3-5 минут. Если сосиски крупные и толстые, то 10 минут.</item>
+	<item>Не варите сосиски долго – они станут безвкусными.</item>
+</string-array>
+
+<string-array name="kotleti_myasnie">
+	<item>Проверните мясо через мясорубку, затем лук и размоченный в молоке или воде хлеб. Все хорошо перемешайте и перекрутите через мясорубку еще раз. </item>
+	<item>Добавьте яйцо, посолите, поперчите, добавьте 1-2 ст. ложки холодной воды или молока и все хорошо перемешайте, чтобы фарш был пышным. Насыпьте на доску панировочные сухари. Разделите фарш на 10 частей.</item>
+	<item> Если мясо было без жира, в каждую часть фарша положите по половине чайной ложки сливочного масла. Лепите котлеты, обваляйте их в сухарях, кладите на раскаленную сковороду смазанную маслом и хорошо обжарьте с обеих сторон.</item>
+</string-array>
+
+<string-array name="omlet">
+	<item>Выпустите яйца в миску и добавьте в них молоко. Посолите и хорошо взбейте вилкой или венчиком до образования однородной массы. Эту массу вылейте на разогретую сковороду и жарьте на сильном огне под крышкой, пока она вся не загустеет.</item>
+	<item>Переверните ножом для блинов (или обычным ножом, если сковорода без покрытия) и немного подрумяньте. Сверните омлет пополам, посыпьте зеленью и подавайте.</item>
+</string-array>
+
+<string-array name="yaichnitsa">
+	<item>Разогрейте на сковороде масло. Вылейте яйца и ножом проткните желтки, чтобы растеклись.</item>
+	<item>Посолите, поперчите, накройте крышкой и жарьте, пока вся масса не загустеет. Подавать хорошо с мелко нарезанной зеленью и свежими огурцами и помидорами.</item>
+</string-array>
+
+<string-array name="yaichnitsa_boltunia">
+	<item>Пока на сковороде разогревается масло разбейте в миску яйца, посолите, поперчите их и хорошо взбейте венчиком. Вылейте яйца на кипящее масло и жарьте пока яйца  не загустеют.</item>
+</string-array>
+
+<string-array name="yaichnitsa_s_kolbaso">
+	<item>Нарежьте колбасу небольшими кусочками и обжарьте в масле. Залейте ее сырыми яйцами, посолите, поперчите и жарьте пока белок не побелеет. При подаче посыпьте мелко нарезанным зеленым луком.</item>
+</string-array>
+
+<string-array name="yaichnitsa_s_pomidorami">
+	<item>На разогретом масле слегка обжарьте нарезанные ломтиками помидоры и залейте их яйцами. Посолите, поперчите и пысыпьте зеленью петрушки лил укропа. Когда белок побелеет – яичница готова.</item>
+</string-array>
+
+<string-array name="yachnitsa_glas">
+	<item>Разогрейте до кипения сливочное масло на сковороде и вылейте на нее яйца. Посолите и пусть жарятся пока белок не побелеет. Подавайте на тойже сковороде.</item>
+</string-array>
+
+<string-array name="mannik">
+	<item>Соедините манную крупу со сметаной, перемешайте и оставьте набухать на 40-60 мин.</item>
+	<item>Разотрите яйца с сахаром.</item>
+	<item>Соедините яично-сахарную и манную смеси и тщательно их перемешайте.</item>
+	<item>Добавьте муку и соду и замесите тесто без комочков.</item>
+	<item>В смазанную жиром или растительным маслом форму (лучше резиновую) влейте тесто и поставьте в разогретую до 180-200 градусов духовку и выпекайте 40-60 минут.</item>
+	<item>Готовый манник будет иметь золотистый цвет и на деревянной зубочистке не останется теста после прокола.</item>
+</string-array>
+
+<string-array name="morkov_na_paru">
+	<item>Почистите морковь, нарежьте ее на кружочки, налейте 1 стакан воды в пароварку, немного подсолите, положите морковь в поддон, наркойте крышкой и варите, пока морковь не станет мягкой, но хрустящей. </item>
+	<item>Переложите ее на блюдо, посыпьте рубленной петрушкой, добавьте масло и лимонный сок. Перемешайте готовую морковь, посолите и поперчите.</item>
+</string-array>
+
+<string-array name="ris_v_micro">
+	<item>200 гр. риса замочите в воде на час, потом долейте воды, чтобы она покрывала рис на 2 см и варить в микроволновке 12 мин. на максимальной мощности. (подойдет 1л кастрюлька для микроволновки).</item>
+</string-array>
+
+<string-array name="makaroni">
+	<item>Обычно на упаковках из-под макарон пишут как их приготовить. Мелкие изделия варятся от 3-5 минут, средние 7-9 минут, крупные 12-15 минут. Но есть некоторые правила, которые не всегда пишут.</item>
+	<item>Возьмите 5 л кастрюлю, налейте 4 л воды, доведите воду до кипения (вода должна сильно бурлить), посолите, приправьте (приправой для макарон, или базиликом, или укропом с петрушкой), добавьте 2 ст. ложки растительного масла (чтобы макароны при варки не слипались) и положите, помешивая, упаковку макарон (400-500 гр.).</item>
+	<item>При варке помешивайте макароны, чтобы они не слипались и не прилипали к кастрюле. Когда вода с макоронами закипит, потавьте мощность плиты на половину и варите макароны до готовности (3-15 минут, в зависимости от типа макарон).</item>
+	<item>Готовые макароны откиньте на дуршлаг и промойте водой, чтобы смыть клейковину. Можете промывать горячей, чтобы макароны быстро не остыли.</item>
+	<item>Выложите макароны на тарелку и подавайте со сливочным или оливковым маслом и кетчупом.</item>
+</string-array>
+
+<string-array name="kartofel_v_micro_s_lukom">
+	<item>Нарежьте лук кольцами, положите в кастрюлю для микроволновой печи, залейте маслом, накройте крышкой и прогрейте в микроволновой печи на полной мощности 3-3,5 минуты.</item>
+	<item>Очистите картофель, нарежьте тонкими кружочками и выложите поверх лука. Посолите, приправьте, влейте немного воды и все перемешиваем.</item>
+	<item>Закройте крышкой и прогрейте при максимальной мощности 5-7 минут. Затем добавьте в картофель с луком сметану и готовьте еще 5-7 минут при максимальной мощности в микроволновке с закрытой крышкой. Перед подачей украсьте нарубленной зеленью.</item>
+</string-array>
+
+	<string-array name="tort_iz_kiselya">
+        <item>Если кисель в брикете - его необходимо мелко покрошить. Смешиваем кисель, яйца, муку и гашеную уксусом соду. Тщательно размешиваем. Тесто получается слегка жидковатым.</item>
+        <item>Если у вас не получается разрезать готовые пироги на коржи - тогда делите тесто на две части и выпекайте каждый корж отдельно. Для этого выливаем тесто в форму и ставим выпекаем в разогретой духовке при 180 градусах примерно 15 минут. Готовность проверяем деревянной палочкой.Пока коржи остывают, займемся кремом. Для этого взбиваем сметану с сахаром. Можно добавить в крем немного ванильного сахара. </item>
+        <item>Смазываем коржи кремом и посыпаем сверху тертым шоколадом и кокосовой стружкой. На 2-3 часа отправляем торт в холодильник и затем подаем к столу.Если у вас есть свежие ягоды - выложите их на торт перед самой подачей к чаю. Они здорово украсят этот маленький шедевр:) </item>
+    </string-array>
+
 </resources>
